2007-04-27  Mike Kestner <mkestner@novell.com> 

	* libstetic/editor/ActionToolbar.cs (FillMenu):  can't Destroy
	after Disposing the widgets. Just Destroy, as it disposes.

2007-04-27  Mike Kestner <mkestner@novell.com> 

	* libsteticui/ObjectWrapper.cs:  ContainerChildHashItem.Equals needs
	to return avoid cast and return false if comparing to another type.

2007-04-26  Mike Kestner <mkestner@novell.com> 

	* libsteticui/PaletteBackend.cs:  ActionGroupBox.Dispose needs to 
	do its cleanup before invoking base.Dispose.
 
2007-04-18  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/libsteticui.mdp, libstetic/libstetic.mdp: Updated.
	* libstetic/wrapper/Box.cs, libstetic/wrapper/Table.cs: Set spacing to
	  6 by default.
	* libstetic/wrapper/ScrolledWindow.cs: Set scrolling to automatic by
	  default.
	* libstetic/WidgetUtils.cs, libstetic/ClassDescriptor.cs,
	  libstetic/TypedClassDescriptor.cs: When looking for default values,
	  avoid initializing the test instance, make sure the get an instance
	  with all default values.

2007-04-10  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/CecilWidgetLibrary.cs: Performance improvements in the
	  method that resolves widget types.
	* libstetic/wrapper/ButtonBox.cs: Don't automatically bind dialog
	  buttons with response type set to None.
	* libstetic/PropertyDescriptor.cs: Set the hasDefault flag when a
	  default is explicitely set in the objects.xml file.
	* libstetic/Makefile.am: Updated.

2007-03-28  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/ApplicationBackend.cs: Don't allow cutting/copying top
	  level widgets. Fixes bug #81015.

2007-03-28  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/wrapper/Container.cs, libstetic/wrapper/Widget.cs: When
	  selecting a widget, avoid setting the focus to the parent
	  container, since it may end changing the selection. Fixes bug
	  #81014. 

2007-03-28  Lluis Sanchez Gual <lluis@novell.com> 
